--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: CMPNY KB
-url: "http://kb.cmpny.com"
+title: База знаний профессиональных разработчиков
+url: "http://prodevguru.github.io"
 baseurl:
 google_analytics_key:
 disqus_shortname:
@@ -10,7 +10,7 @@ newsletter_action:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: IT Knowledge Base by Tech Futures.
+description: База знаний профессиональных разработчиков.
 author:
   name:
   email:
@@ -23,7 +23,7 @@ social:
 # -----
 # Build
 
-timezone: America/Vancouver
+timezone: Europe/Moscow
 
 permalink: /:categories/:title/
 
