--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,16 +1,16 @@
 - name:
-  link: http://www.facebook.com/cmpnycowork
+  link:
   new_window: true
   social_icon: Facebook
 - name:
-  link: http://www.twitter.com/cmpnycowork
+  link:
   social_icon: Twitter
   new_window: true
 - name:
-  link: http://www.instagram.com/cmpnycowork
+  link:
   social_icon: Instagram
   new_window: true
-- name: 
+- name:
   link: /feed.xml
   social_icon: RSS
   new_window: false
